# outrider

./: Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md
.github/workflows/: build.yml
charts/outrider/: Chart.yaml  README.md  values.yaml
charts/outrider/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/controllers/: cluster.rs  mod.rs  secret.rs  sync_manager.rs  utils.rs
src/kubernetes/: client.rs  crd.rs  mod.rs  namespaces.rs
src/reconcilers/: cluster.rs  mod.rs  secret.rs
src/sync/: manager.rs  mod.rs  secrets.rs
src/types/: cluster.rs  mod.rs
