[package]
name = "outrider"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive"] }
kube-runtime = "0.99.0"
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
schemars = "0.8"
url = "2.5.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
